# skipp-algo

./: .commit_msg.txt  .coverage  .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .importlinter  .mailmap  .pre-commit-config.yaml  .test_durations  <MagicMock name='CAPABILITY_CACHE_FILE' id='4415770304'>  <MagicMock name='CAPABILITY_CACHE_FILE' id='4497715424'>  BFI-Reversal.pine  BTC 3m EV Scalper BALANCED (Harmonized).pine  CHANGELOG.md  CHOCH-Base_Indikator.pine  CHOCH-Base_Strategy.pine  CHOCH-Indicator.pine  CHOCH-Strategy.pine  CHoCH.pine  Dockerfile  Dockerfile.dashboard  PINE_LEGACY.md  QuickALGO.pine  README.md  SMC Core + Zones.pine  SMC++.pine  SMC_Breakout_Overlay.pine  SMC_Core_Engine.pine  SMC_Core_Zones.pine  SMC_Dashboard.pine  SMC_Event_Overlay.pine  SMC_Exit_Signal.pine  SMC_HTF_Confluence.pine  SMC_Hold_Manager.pine  SMC_Imbalance_Context.pine  SMC_Liquidity_Context.pine  SMC_Liquidity_Structure.pine  SMC_Long_Strategy.pine  (+96 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.streamlit/: config.toml
Downloads/: PPT-Vault-Automation-Notiz.md
FutureFeatureConsideration/: continue_fallback_rule.md  smc_v2_handover.md  tradingfinder-smc-comparison-2026-06-23.md  tradingfinder-smc-implementation-plan-2026-06-24.md
SMC++/: smc_bus_private.pine  smc_context_resolvers.pine  smc_core_types.pine  smc_draw.pine  smc_lifecycle_private.pine  smc_observability_private.pine  smc_profile_engine.pine  smc_utils.pine
artifacts/: publish_manifest.json  review_core_types_and_draw_findings.json  review_core_types_and_draw_report.txt  terminal_feed.jsonl  terminal_vd.jsonl
configs/: live_risk_limits.json  plan_2_8_snoozes.json
dashboard/: __init__.py  decision_first_panel.py  verdict_panel.py
docs/: ADR-001-open-prep-integration-boundary.md  ADR-002-temporary-fail-under-reduction.md  AGENT_HANDOVER_2026-06-04.md  AGENT_HANDOVER_news_overlay_2026-06-06.md  ANBIETER_VERGLEICH_Finnhub_TwelveData_Alpaca.md  API_BUDGET_CALCULATIONS.md  ARTIFACT_STRATEGY.md  AUDIT_L1_REVIEW_RETROSPECTIVE_2026-05-12.md  AUDIT_R5_CAT7_12.md  AUDIT_REPORT_Comprehensive.md  BLOOMBERG_TERMINAL_PLAN.md  CHANGELOG_CHOCH_recent.md  CHANGELOG_v6.2.11_improvements.md  CHANGELOG_v6.2.18_entry_labels.md  CHANGELOG_v6.2.21_strict_mode_ux.md  CHANGELOG_v6.2.7.md  CHANGELOG_v6.2.X_USI_Premium.md  CHANGELOG_v6.2.md  CHANGELOG_v6.2_EvalBaselines.md  CHANGELOG_v6.2_RepaintFix.md  CLOSE_IMBALANCE_IMPLEMENTATION_BLUEPRINT.md  COPILOT_REVIEW_TRIAGE_PROTOCOL.md  DASHBOARD_AUTOMATION_COMPLETE.md  DASHBOARD_ISSUES_ROOT_CAUSE_AND_FIXES.md  DASHBOARD_OPERATIONAL_FIX_REPORT.md  DATABENTO_DECOMPOSITION_PLAN.md  DATABENTO_STRUCTURE_FEATURES.md  DATABENTO_VOLATILITY_SUITE.md  DECISIONS.md  DIRECTOR_FINDINGS_2026-06-02.md  FEATURE_FREEZE.md  FMP_ENDPOINT_GAP_ANALYSE.md  FUNCTIONAL_TEST_MATRIX.md  FVG_LABEL_AUDIT_Q3.md  FVG_QUALITY_D4_AUDIT.md  GLOSSARY.md  IMPROVEMENTS_C2_C12_ROADMAP_2026-04-26.md  LEGACY_REMOVAL_PLAN.md  LIVE_OVERLAY_INFRA_OPS.md  LIVE_OVERLAY_SIGNALS_ARCHITECTURE_GAP.md  (+213 more)
governance/: __init__.py  alpha_ledger.json  alpha_ledger.py  edge_hypotheses.json  edge_hypotheses.py  epnl_after_cost.py  execution_costs.py  family_avg_trade_size_v2.py  family_calibration.py  family_cross_lead_lag_hy_v3.py  family_cross_lead_lag_v2.py  family_event_adapter.py  family_event_score.py  family_feature_ab.py  family_feature_regime.py  family_kyle_lambda_v2.py  family_meta_label.py  family_momentum_ribbon_v2.py  family_ofi_imbalance_v2.py  family_returns.py  family_score_features_v2.py  family_signed_uoa_notional_v2.py  family_significance.py  family_verdict.py  family_vix_fix_v1.py  family_vpin_v2.py  family_vrvp_v2.py  family_walkforward.py  magnitude_resolution_gate.py  magnitude_stage_policy.json  magnitude_stage_policy.py  point_in_time.py  promotion_gate.py  promotion_report.py  quant-audit-2026-05-21-validation.md  run_manifest.py  sample_uniqueness.py  types.py
legacy/: SMC++.pine
marketing/: landing_v0.html  landing_v0.md  tradingview_indicator_templates.md
metrics/: runner_selection.jsonl  runner_selection_summary.md
ml/: README.md  __init__.py  metrics.py  types.py  walkforward.py
newsstack_fmp/: __init__.py  _bz_http.py  _market_cal.py  common_types.py  config.py  enrich.py  ingest_benzinga.py  ingest_benzinga_calendar.py  ingest_benzinga_financial.py  ingest_fmp.py  ingest_fmp_filings.py  ingest_fmp_political.py  ingest_opra_options_flow.py  ingest_unusual_whales.py  normalize.py  open_prep_export.py  opra_uoa.py  pipeline.py  run.py  scoring.py  shared_fetch.py  state.db  state.db-shm  state.db-wal  store_sqlite.py  terminal_state.db  terminal_state.db-shm  terminal_state.db-wal
open_prep/: PRODUCTION_BUG_REPORT.md  __init__.py  ai.py  alerts.py  bea.py  candidate_weights.py  config_validation.py  diff.py  dirty_flag_manager.py  error_taxonomy.py  feature_flags.py  feature_importance_report.py  latest_open_prep_run.json  log_redaction.py  macro.py  news.py  newsstack_status.py  outcome_backfill.py  outcomes.py  playbook.py  psr_robust.py  realtime_signals.py  regime.py  rt_promotion.py  run_open_prep.py  scorer.py  screen.py  sentiment_fng.py  signal_decay.py  stats_helpers.py  streamlit_monitor.py  technical_analysis.py  trade_cards.py  utils.py  watchlist.py
patches/: session-minute-coverage-backport.patch
pine/: skipp_calibration.pine  skipp_indicators.pine  skipp_labels.pine  skipp_math.pine  skipp_scoring.pine  smc_live_overlay_consumer.pine
reports/: ats_baseline_20d.json  databento_volatility_production_20260307_114724_microstructure_mapping_2026-03-06.json  databento_volatility_production_20260307_114724_microstructure_mapping_2026-03-06.md  databento_watchlist_top5_pre1530.csv  databento_watchlist_top5_pre1530.md  databento_watchlist_top5_pre1530_microstructure_readiness.md  ibkr_watchlist_preview.json  ibkr_watchlist_preview_2026-03-06.json  largecap_watchlist.json  microstructure_lists_diff_2026-03-23.md  open_prep_compare_normal_20260220_020453Z.json  open_prep_compare_preopen_latest.json  open_prep_full_run_latest.json  (+36 more)
(+24801 files in other folders)
