[project]
name = "skipp-algo"
version = "6.3.9"
description = "Multi-source financial news aggregation, scoring & trading signal pipeline"
requires-python = ">=3.12"

[project.optional-dependencies]
vol-regime = ["arch>=7.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:Microstructure base asof_date is .* days old:UserWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",   # assert used (fine in tests)
    "S105",   # hardcoded password (false positives on test fixtures)
    "S106",   # hardcoded password (false positives on test fixtures)
    "S110",   # try-except-pass (acceptable in resilient polling)
    "S112",   # try-except-continue
    "S310",   # suspicious-url-open (httpx.get is safe, not urllib)
    "S311",   # random not for crypto (fine for scoring jitter)
    "S324",   # hashlib insecure (MD5 used for cluster hashing, not crypto)
    "T201",   # print statement (acceptable in CLI scripts)
    "E501",   # line too long (handled by formatter)
    "B905",   # zip strict (Python 3.10+ only, many cases don't need it)
    "A001",   # shadowing builtins (some legacy names)
    "A002",   # shadowing builtins (argument names)
    "N802",   # function name lowercase (test names, Pine helpers)
    "N803",   # argument name lowercase (Pine-style names)
    "N806",   # variable name lowercase (Pine-style names)
    "UP015",  # redundant open mode
    "RUF001", # ambiguous unicode string (German: ü, ö, ä, ß)
    "RUF002", # ambiguous unicode docstring (en-dash in German docs)
    "RUF003", # ambiguous unicode comment (en-dash, German chars)
    "SIM102", # collapsible-if (readability preference)
    "SIM105", # suppressible-exception (contextlib.suppress not always clearer)
    "SIM108", # if-else to ternary (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20", "B011"]
"scripts/*" = ["T20"]
"open_prep/streamlit_monitor.py" = ["T20"]
"streamlit_terminal.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["newsstack_fmp", "open_prep", "smc_core", "terminal_poller", "terminal_export"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/pine_sim\\.py",
    "__pycache__",
    "\\.venv",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.coverage.run]
# SMC-only scope per repo-memory `smc-scope-excludes-streamlit-terminal.md`
# and issue #17. The Streamlit terminal stack and the news/alerting helpers
# (terminal_export, terminal_notifications, terminal_ui_helpers) are not
# part of the SMC architecture and were dragging total coverage below the
# 95% fail_under threshold (streamlit_terminal.py alone is ~2580 stmts at
# ~16% covered). Per-module Streamlit tests still run; they just no longer
# gate the SMC suite. Re-add only with an explicit policy decision.
source = [
    "newsstack_fmp",
    "open_prep",
    "smc_core",
    "smc_integration",
    "scripts",
]
omit = ["tests/*", "*.pine"]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Temporary marathon floor per docs/ADR-002-temporary-fail-under-reduction.md.
# Current main total is ~85.20 %; this floor (85) keeps the gate green for
# unrelated safety/infra PRs while still failing on real regressions.
# Each merged coverage bucket PR MUST raise this value by the lift it
# earned (ratchet protocol). Target is to restore 95 once buckets A–E land.
fail_under = 85
