[project]
name = "skipp-algo"
version = "6.3.9"
description = "Multi-source financial news aggregation, scoring & trading signal pipeline"
requires-python = ">=3.12"

[project.optional-dependencies]
vol-regime = ["arch>=7.2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Explicit package list to disambiguate flat-layout discovery (CI was failing
# with "Multiple top-level packages discovered"). Top-level standalone modules
# (terminal_*, databento_*, scripts/*) are not exposed via install — tests and
# CLI entrypoints reach them through `pythonpath = ["."]` (pytest) and direct
# `python scripts/...` invocation.
[tool.setuptools]
packages = [
    "dashboard",
    "governance",
    "ml",
    "ml.calibration",
    "ml.drift",
    "ml.features",
    "ml.inference",
    "ml.stacking",
    "ml.training",
    "newsstack_fmp",
    "open_prep",
    "rl",
    "rl.agents",
    "rl.baselines",
    "rl.drift",
    "rl.safety",
    "rl.simulator",
    "rl.slippage",
    "smc_core",
    "smc_core.inference",
    "smc_integration",
    "smc_adapters",
    "smc_tv_bridge",
    "terminal_tabs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Default to parallel execution to match CI (`pytest -n auto --dist=loadfile`).
# Rationale (chore/pytest-xdist-local-default):
#   * pytest-xdist is already required in requirements.txt (>=3.6.0) and
#     used by `.github/workflows/ci.yml` for the validate job.
#   * `--dist=loadfile` keeps every test in a file on the same worker, which
#     preserves module-level fixture state and is required by tests that
#     touch shared on-disk artifacts (see repo-memory
#     `structure-batch-pytest-canonical-write-guard.md`).
#   * Determinism is guarded by `tests/test_pytest_xdist_parametrize_determinism.py`
#     (AST pin landed in PR #104), so non-deterministic parametrize sources
#     can no longer regress and break worker collection.
# Override locally with `pytest -n0` for interactive debugging (pdb /
# breakpoints do not work under xdist workers). To disable the plugin
# entirely, also clear addopts: `pytest -o addopts= -p no:xdist`.
#
# Local memory cap (2026-04-28): pinned to `-n 4` instead of `-n auto`.
#   * Mac dev box (16 GB RAM, 12 cores) was OOM-thrashing under `-n auto`:
#     12 workers × ~180-450 MB RSS = 2-5 GB peak just for SMC suite.
#   * CI overrides this back to `-n auto` by passing `-n auto` on the
#     `python -m pytest ...` command line in `.github/workflows/ci.yml`.
#   * Override locally for full parallelism: `pytest -n auto ...` or
#     `PYTEST_XDIST_AUTO_NUM_WORKERS=8 pytest -n auto ...`.
addopts = "-n 4 --dist=loadfile"
filterwarnings = [
    "ignore:Microstructure base asof_date is .* days old:UserWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",   # assert used (fine in tests)
    "S105",   # hardcoded password (false positives on test fixtures)
    "S106",   # hardcoded password (false positives on test fixtures)
    "S110",   # try-except-pass (acceptable in resilient polling)
    "S112",   # try-except-continue
    "S310",   # suspicious-url-open (httpx.get is safe, not urllib)
    "S311",   # random not for crypto (fine for scoring jitter)
    "S324",   # hashlib insecure (MD5 used for cluster hashing, not crypto)
    "T201",   # print statement (acceptable in CLI scripts)
    "E501",   # line too long (handled by formatter)
    "B905",   # zip strict (Python 3.10+ only, many cases don't need it)
    "A001",   # shadowing builtins (some legacy names)
    "A002",   # shadowing builtins (argument names)
    "N802",   # function name lowercase (test names, Pine helpers)
    "N803",   # argument name lowercase (Pine-style names)
    "N806",   # variable name lowercase (Pine-style names)
    "UP015",  # redundant open mode
    "RUF001", # ambiguous unicode string (German: ü, ö, ä, ß)
    "RUF002", # ambiguous unicode docstring (en-dash in German docs)
    "RUF003", # ambiguous unicode comment (en-dash, German chars)
    "SIM102", # collapsible-if (readability preference)
    "SIM105", # suppressible-exception (contextlib.suppress not always clearer)
    "SIM108", # if-else to ternary (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20", "B011", "N801", "E402"]
"scripts/*" = ["T20", "E402"]
"open_prep/streamlit_monitor.py" = ["T20", "E402"]
"streamlit_terminal.py" = ["E402"]
"streamlit_databento_volatility_screener.py" = ["E402"]
"streamlit_smc_micro_base_generator.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["governance", "newsstack_fmp", "open_prep", "rl", "smc_core", "terminal_poller", "terminal_export"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/pine_sim\\.py",
    "__pycache__",
    "\\.venv",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.coverage.run]
# SMC-only scope per repo-memory `smc-scope-excludes-streamlit-terminal.md`
# and issue #17. The Streamlit terminal stack and the news/alerting helpers
# (terminal_export, terminal_notifications, terminal_ui_helpers) are not
# part of the SMC architecture and were dragging total coverage below the
# 95% fail_under threshold (streamlit_terminal.py alone is ~2580 stmts at
# ~16% covered). Per-module Streamlit tests still run; they just no longer
# gate the SMC suite. Re-add only with an explicit policy decision.
# Also excludes scripts/run_smc_release_gates.py — release-gate orchestrator, only consumed by the smoke test (already excluded).
source = [
    "newsstack_fmp",
    "open_prep",
    "smc_core",
    "smc_integration",
    "scripts",
]
# Standalone CLI tools, one-off audits, probes, smoke runners, and the
# Streamlit monitor UI are excluded from the coverage gate. They are not
# imported by production modules (verified) and have no automated test
# coverage by design — running them is a manual operator action. Keeping
# them in scope dragged total coverage well below the 95% fail_under
# threshold (e.g. open_prep/streamlit_monitor.py alone is ~1472 stmts at
# 0% covered, analogous to streamlit_terminal.py which was excluded in
# issue #17 per repo-memory `coverage-source-config.md`).
omit = [
    "tests/*",
    "*.pine",
    "open_prep/streamlit_monitor.py",
    "scripts/fvg_asia_real_sample.py",
    "scripts/fvg_label_audit_q3.py",
    "scripts/pine_slim.py",
    "scripts/probe_newsapi_feed_cursor.py",
    "scripts/run_smc_e2e_smoke_test.py",
    "scripts/tv_publish_evidence_summary.py",
    "scripts/run_smc_release_gates.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Temporary marathon floor per docs/ADR-002-temporary-fail-under-reduction.md.
# Each merged coverage bucket PR MUST raise this value by the lift it
# earned (ratchet protocol). Target is to restore 95 once buckets A–E land.
#
# Ratchet history (oldest first):
#   85 — initial ADR-002 floor (#41), TOTAL ~85.20 %
#   86 — buckets F/H/I/J/N landed (PR #68/#69/#70/#71/#73);
#        projected TOTAL ~86.5 %, leaving ~0.5 pp headroom.
#        Lift breakdown (newly covered statements):
#          • bucket I (smc_fmp_client.py 56→99 %)            +147
#          • bucket J (execute_ibkr_watchlist.py 60→94 %)    +172
#          • bucket H (run_open_prep.py 59→69 %)             +274
#          • bucket F (open_prep/scorer.py 78→91 %)           +44
#          • bucket N (databento_production_export 83→90 %) +112
#        Σ ≈ 749 / 58642 stmts ≈ +1.28 pp.
#   85 — recovered ADR-002 baseline floor (rebaseline 2026-05-03):
#        TOTAL drifted to ~85.x % over the marathon since the 86 bump.
#        The ~0.5 pp headroom from buckets F/H/I/J/N (PR #68–#73) was
#        consumed by unrelated feature merges. Per ADR-002 the floor
#        may be ratcheted down once when drift is ≤1 pp; restoring 85
#        unblocks main CI. Follow-up bucket PR queued to recover.
fail_under = 85
