[project]
name = "skipp-algo"
version = "6.3.9"
description = "Multi-source financial news aggregation, scoring & trading signal pipeline"
requires-python = ">=3.12"

[project.optional-dependencies]
vol-regime = ["arch>=7.2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Explicit package list to disambiguate flat-layout discovery (CI was failing
# with "Multiple top-level packages discovered"). Top-level standalone modules
# (terminal_*, databento_*, scripts/*) are not exposed via install — tests and
# CLI entrypoints reach them through `pythonpath = ["."]` (pytest) and direct
# `python scripts/...` invocation.
[tool.setuptools]
packages = [
    "dashboard",
    "governance",
    "ml",
    "ml.calibration",
    "ml.drift",
    "ml.features",
    "ml.inference",
    "ml.stacking",
    "ml.training",
    "newsstack_fmp",
    "open_prep",
    "rl",
    "rl.agents",
    "rl.baselines",
    "rl.drift",
    "rl.safety",
    "rl.simulator",
    "rl.slippage",
    "skipp_config",
    "smc_core",
    "smc_core.inference",
    "smc_integration",
    "smc_adapters",
    "smc_tv_bridge",
    "terminal_tabs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Focused / debug runs are intentionally serial (see
# `.github/copilot-instructions.md` → "Testing"): the repo has many large
# test files, and pdb / breakpoints do not work under xdist workers. CI
# and local sweep tasks opt into parallelism explicitly via
# `-n auto --dist=worksteal` on the command line; do not reintroduce a
# global xdist default here. Determinism for parametrized sources is
# guarded by `tests/test_pytest_xdist_parametrize_determinism.py`.
filterwarnings = [
    "ignore:Microstructure base asof_date is .* days old:UserWarning",
]
# ADR-0012: the `slow` marker partitions the suite for a future
# fast-gates vs validate split (Option B — disjoint via marker).
# Phase 1: CI selection is UNCHANGED — `fast-gates` runs an explicit
# file list and `validate` runs the full suite; the marker is not yet
# a CI `-m` selector. conftest.py auto-marks every file NOT in the
# FAST inventory as `slow`, so `pytest -m "not slow"` approximates the
# fast lane locally. The FAST inventory is pinned in
# tests/_fast_inventory.py and guarded by
# tests/test_pytest_marker_bucket_discipline.py so partition changes
# are deliberate and reviewable.
markers = [
    "slow: long-running test; partitioned to the `validate` job (ADR-0012).",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",   # assert used (fine in tests)
    "S105",   # hardcoded password (false positives on test fixtures)
    "S106",   # hardcoded password (false positives on test fixtures)
    "S110",   # try-except-pass (acceptable in resilient polling)
    "S112",   # try-except-continue
    "S310",   # suspicious-url-open (httpx.get is safe, not urllib)
    "S311",   # random not for crypto (fine for scoring jitter)
    "S324",   # hashlib insecure (MD5 used for cluster hashing, not crypto)
    "T201",   # print statement (acceptable in CLI scripts)
    "E501",   # line too long (handled by formatter)
    "B905",   # zip strict (Python 3.10+ only, many cases don't need it)
    "A001",   # shadowing builtins (some legacy names)
    "N802",   # function name lowercase (test names, Pine helpers)
    "N803",   # argument name lowercase (Pine-style names)
    "N806",   # variable name lowercase (Pine-style names)
    "UP015",  # redundant open mode
    "RUF001", # ambiguous unicode string (German: ü, ö, ä, ß)
    "RUF002", # ambiguous unicode docstring (en-dash in German docs)
    "RUF003", # ambiguous unicode comment (en-dash, German chars)
    "SIM102", # collapsible-if (readability preference)
    "SIM105", # suppressible-exception (contextlib.suppress not always clearer)
    "SIM108", # if-else to ternary (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20", "B011", "N801", "E402"]
"scripts/*" = ["T20", "E402"]
# S108 (hardcoded /tmp paths) deliberately NOT blanket-ignored for scripts/*:
# only the research/dev-only c10b/c10c analysis scripts (documented local
# /tmp corpora, never run in CI/prod) and the provenance scanner (regex
# PATTERN matching pytest tmp dirs, not file usage) are suppressed.
"scripts/c10c_aggregate_per_bar.py" = ["S108"]
# S603/S607 (subprocess audit) deliberately NOT blanket-ignored for scripts/*:
# new scripts get full subprocess linting. The 11 files below are grandfathered
# (fixed-argv subprocess calls to repo-local tools / gh / git, reviewed 2026-06-12,
# PR #2713); remove entries as files get cleaned up.
"scripts/analyze_publish_cadence.py" = ["S603", "S607"]
"scripts/check_tradingview_storage_state_security.py" = ["S607"]
"scripts/measure_databento_ops_run.py" = ["S603"]
"scripts/phase5_perf_trend.py" = ["S603", "S607"]
"scripts/profile_cron_with_pyspy.py" = ["S603"]
"scripts/profile_pytest_durations.py" = ["S603"]
"scripts/regenerate_requirements_lock.py" = ["S603"]
"scripts/scan_manifests_for_pytest_provenance.py" = ["S603", "S108"]
"scripts/smc_micro_publish_guard.py" = ["S603"]
"scripts/smc_zone_priority_calibration.py" = ["S603"]
"scripts/start_open_prep_suite.py" = ["S603"]
"open_prep/outcomes.py" = ["E402"]
"open_prep/realtime_signals.py" = ["E402", "S104", "SIM115"]
"open_prep/run_open_prep.py" = ["E402"]
"open_prep/streamlit_monitor.py" = ["T20", "E402", "E731"]
"scripts/c10b_compute_cofiring.py" = ["E701", "E702", "B007", "S108"]
"scripts/c10b_compute_variance_decomp.py" = ["E701", "E702", "E741", "B007", "S108"]
"skipp_config/trading_thresholds.py" = ["UP047"]
"streamlit_terminal.py" = ["E402", "F821"]
"databento_volatility_screener.py" = ["E402"]
"streamlit_databento_volatility_screener.py" = ["E402"]
"streamlit_smc_micro_base_generator.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["governance", "newsstack_fmp", "open_prep", "rl", "smc_core", "terminal_poller", "terminal_export"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/pine_sim\\.py",
    "__pycache__",
    "\\.venv",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.coverage.run]
# SMC-only scope per repo-memory `smc-scope-excludes-streamlit-terminal.md`
# and issue #17. The Streamlit terminal stack and the news/alerting helpers
# (terminal_export, terminal_notifications, terminal_ui_helpers) are not
# part of the SMC architecture and were dragging total coverage below the
# 95% fail_under threshold (streamlit_terminal.py alone is ~2580 stmts at
# ~16% covered). Per-module Streamlit tests still run; they just no longer
# gate the SMC suite. Re-add only with an explicit policy decision.
# Also excludes scripts/run_smc_release_gates.py — release-gate orchestrator, only consumed by the smoke test (already excluded).
source = [
    "newsstack_fmp",
    "open_prep",
    "smc_core",
    "smc_integration",
    "scripts",
]
# Standalone CLI tools, one-off audits, probes, smoke runners, and the
# Streamlit monitor UI are excluded from the coverage gate. They are not
# imported by production modules (verified) and have no automated test
# coverage by design — running them is a manual operator action. Keeping
# them in scope dragged total coverage well below the 95% fail_under
# threshold (e.g. open_prep/streamlit_monitor.py alone is ~1472 stmts at
# 0% covered, analogous to streamlit_terminal.py which was excluded in
# issue #17 per repo-memory `coverage-source-config.md`).
omit = [
    "tests/*",
    "*.pine",
    "open_prep/streamlit_monitor.py",
    "scripts/fvg_asia_real_sample.py",
    "scripts/fvg_label_audit_q3.py",
    "scripts/pine_slim.py",
    "scripts/probe_newsapi_feed_cursor.py",
    "scripts/run_smc_e2e_smoke_test.py",
    "scripts/tv_publish_evidence_summary.py",
    "scripts/run_smc_release_gates.py",
    # Issue #2200 omit-list expansion (2026-05-14): one-shot research /
    # probe / showcase CLIs, 0–29 % covered by design. Same rationale as
    # the standalone-CLI carve-out from ADR-002 #26 — running them is a
    # manual operator action, not part of the SMC live-incubation path.
    "scripts/c10b_compute_cofiring.py",
    "scripts/c10b_compute_variance_decomp.py",
    "scripts/probe_databento_entitlement.py",
    "scripts/generate_showcase_summary.py",
    "scripts/measure_databento_ops_run.py",
    "newsstack_fmp/ingest_opra_options_flow.py",
    # PR #2258 omit-list expansion: workflow-time lint CLIs that replaced
    # the two deleted pytest pins. They are invoked only by
    # .github/workflows/smc-fast-pr-gates.yml against the *.yml files in
    # .github/workflows/, are not imported by any production module
    # (verified), and have no automated test coverage by design — same
    # standalone-CLI carve-out rationale as ADR-002 #26 / Issue #2200.
    # The YAML-parsing semantics they share are exercised end-to-end via
    # tests/test_workflow_continue_on_error_inventory.py and
    # tests/test_workflow_continue_on_error_semantics.py (rewritten in
    # this PR to use the tests/_workflow_yaml.py helper).
    "scripts/lint_workflow_permissions.py",
    "scripts/lint_workflow_pythonunbuffered.py",
    "scripts/lint_workflow_defaults.py",
    # main coverage rebaseline (2026-05-20): zero-covered standalone
    # operator CLIs / exports / probes / audits under scripts/. These are
    # invoked manually or via ad-hoc maintenance workflows, are not part
    # of the production import graph, and are guarded only by policy/
    # ledger tests rather than behavioral coverage. Keeping all 23 in the
    # gate dropped TOTAL to 83.70 % on main; omitting only these 0 %-covered
    # CLIs restores the documented standalone-script carve-out without
    # touching importable production modules.
    "scripts/check_environment.py",
    "scripts/c10c_aggregate_per_bar.py",
    "scripts/c10c_cofiring_vs_single.py",
    "scripts/c10c_joint_vs_product.py",
    "scripts/count_main_locals.py",
    "scripts/databento_smoke_test.py",
    "scripts/export_extended_structure_discovery_report.py",
    "scripts/export_open_prep_lists.py",
    "scripts/export_open_prep_reports.py",
    "scripts/export_parquet_csv_streaming.py",
    "scripts/export_smc_live_news_snapshot.py",
    "scripts/export_smc_structure_artifacts_from_workbook.py",
    "scripts/export_smc_structure_audit.py",
    "scripts/fvg_session_artifact_diagnosis.py",
    "scripts/ib_client_id.py",
    "scripts/investigate_universe_delta.py",
    "scripts/phase5_perf_trend.py",
    "scripts/probe_fmp_13f_endpoints.py",
    "scripts/profile_cron_with_pyspy.py",
    "scripts/profile_pytest_durations.py",
    "scripts/regenerate_requirements_lock.py",
    "scripts/scan_manifests_for_pytest_provenance.py",
    "scripts/start_open_prep_suite.py",
    "scripts/ev20_resolution_cost_audit.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Temporary marathon floor per docs/ADR-002-temporary-fail-under-reduction.md.
# Each merged coverage bucket PR MUST raise this value by the lift it
# earned (ratchet protocol). Target is to restore 95 once buckets A–E land.
#
# Ratchet history (oldest first):
#   85 — initial ADR-002 floor (#41), TOTAL ~85.20 %
#   86 — buckets F/H/I/J/N landed (PR #68/#69/#70/#71/#73);
#        projected TOTAL ~86.5 %, leaving ~0.5 pp headroom.
#        Lift breakdown (newly covered statements):
#          • bucket I (smc_fmp_client.py 56→99 %)            +147
#          • bucket J (execute_ibkr_watchlist.py 60→94 %)    +172
#          • bucket H (run_open_prep.py 59→69 %)             +274
#          • bucket F (open_prep/scorer.py 78→91 %)           +44
#          • bucket N (databento_production_export 83→90 %) +112
#        Σ ≈ 749 / 58642 stmts ≈ +1.28 pp.
#   85 — recovered ADR-002 baseline floor (rebaseline 2026-05-03):
#        TOTAL drifted to ~85.x % over the marathon since the 86 bump.
#        The ~0.5 pp headroom from buckets F/H/I/J/N (PR #68–#73) was
#        consumed by unrelated feature merges. Per ADR-002 the floor
#        may be ratcheted down once when drift is ≤1 pp; restoring 85
#        unblocks main CI. Follow-up bucket PR queued to recover.
#   85 — omit-list expansion for 6 one-shot research / probe / showcase
#        scripts (Issue #2200, 2026-05-14). main drifted to 84.50 % over
#        the C10b/Bridge-1c merge train; both PRs #2196/#2197 shipped
#        with red push-mode validate (fast-gates green, no enforcement
#        gap). Per ADR-002 precedent #26 standalone-CLI carve-out is the
#        documented remediation when added stmts are 0–29 % covered by
#        design. Removed ~520 stmts → projected TOTAL ≈ 85.2 %, restores
#        green push-mode validate without touching the 85-floor.
#        Removed: scripts/c10b_compute_cofiring.py,
#        scripts/c10b_compute_variance_decomp.py,
#        scripts/probe_databento_entitlement.py,
#        scripts/generate_showcase_summary.py,
#        scripts/measure_databento_ops_run.py,
#        newsstack_fmp/ingest_opra_options_flow.py.
#   85 — main coverage repair (2026-05-20). validate on main failed at
#        83.70 % after a long merge train, but the delta was concentrated
#        in 23 newly in-scope scripts/* operator CLIs sitting at 0 %
#        behavioral coverage by design. Per ADR-002 precedent #26 /
#        Issue #2200, extending the standalone-CLI carve-out for these
#        manual exports / probes / audits removes ~1206 stmt / miss from
#        the denominator and restores TOTAL to ~85.10 % without masking
#        importable production modules.
fail_under = 85
